wavelet_partition.py

--- a/FLX_JP-Swl.ipynb
+++ b/FLX_JP-Swl.ipynb
@@ -12,11 +12,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-7de229fb91c9>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-7de229fb91c9>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    import wavelet-partition as wave\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pywt\n",
+    "import wavelet-partition as wave\n",
+    "\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.dates import DateFormatter\n",
     "import matplotlib.dates as mdates\n",
@@ -53,124 +64,124 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from functools import partial, reduce\n",
-    "def mra(data, wavelet, level=None, axis=-1, transform='swt',\n",
-    "        mode='periodization'):\n",
-    "    \"\"\"Forward 1D multiresolution analysis.\n",
-    "    It is a projection onto the wavelet subspaces.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data: array_like\n",
-    "        Input data\n",
-    "    wavelet : Wavelet object or name string\n",
-    "        Wavelet to use\n",
-    "    level : int, optional\n",
-    "        Decomposition level (must be >= 0). If level is None (default) then it\n",
-    "        will be calculated using the `dwt_max_level` function.\n",
-    "    axis: int, optional\n",
-    "        Axis over which to compute the DWT. If not given, the last axis is\n",
-    "        used. Currently only available when ``transform='dwt'``.\n",
-    "    transform : {'dwt', 'swt'}\n",
-    "        Whether to use the DWT or SWT for the transforms.\n",
-    "    mode : str, optional\n",
-    "        Signal extension mode, see `Modes` (default: 'symmetric'). This option\n",
-    "        is only used when transform='dwt'.\n",
-    "    Returns\n",
-    "    -------\n",
-    "    [cAn, {details_level_n}, ... {details_level_1}] : list\n",
-    "        For more information, see the detailed description in `wavedec`\n",
-    "    See Also\n",
-    "    --------\n",
-    "    ``imra``, ``swt``\n",
-    "    Notes\n",
-    "    -----\n",
-    "    This is sometimes referred to as an additive decomposition because the\n",
-    "    inverse transform (``imra``) is just the sum of the coefficient arrays\n",
-    "    [1]_. The decomposition using ``transform='dwt'`` corresponds to section\n",
-    "    2.2 while that using an undecimated transform (``transform='swt'``) is\n",
-    "    described in section 3.2 and appendix A.\n",
-    "    This transform does not share the variance partition property of ``swt``\n",
-    "    with `norm=True`. It does however, result in coefficients that are\n",
-    "    temporally aligned regardless of the symmetry of the wavelet used.\n",
-    "    The redundancy of this transform is ``(level + 1)``.\n",
-    "    References\n",
-    "    ----------\n",
-    "    .. [1] Donald B. Percival and Harold O. Mofjeld. Analysis of Subtidal\n",
-    "        Coastal Sea Level Fluctuations Using Wavelets. Journal of the American\n",
-    "        Statistical Association Vol. 92, No. 439 (Sep., 1997), pp. 868-880.\n",
-    "        https://doi.org/10.2307/2965551\n",
-    "    \"\"\"\n",
-    "    if transform == 'swt':\n",
-    "        if mode != 'periodization':\n",
-    "            raise ValueError(\n",
-    "                \"transform swt only supports mode='periodization'\")\n",
-    "        kwargs = dict(wavelet=wavelet, norm=True)\n",
-    "        forward = partial(pywt.swt, level=level, trim_approx=True, **kwargs)\n",
-    "        if axis % data.ndim != data.ndim - 1:\n",
-    "            raise ValueError(\"swt only supports axis=-1\")\n",
-    "        inverse = partial(pywt.iswt, **kwargs)\n",
-    "        is_swt = True\n",
-    "    elif transform == 'dwt':\n",
-    "        kwargs = dict(wavelet=wavelet, mode=mode, axis=axis)\n",
-    "        forward = partial(pywt.wavedec, level=level, **kwargs)\n",
-    "        inverse = partial(pywt.waverec, **kwargs)\n",
-    "        is_swt = False\n",
-    "    else:\n",
-    "        raise ValueError(\"unrecognized transform: {}\".format(transform))\n",
+    "# from functools import partial, reduce\n",
+    "# def mra(data, wavelet, level=None, axis=-1, transform='swt',\n",
+    "#         mode='periodization'):\n",
+    "#     \"\"\"Forward 1D multiresolution analysis.\n",
+    "#     It is a projection onto the wavelet subspaces.\n",
+    "#     Parameters\n",
+    "#     ----------\n",
+    "#     data: array_like\n",
+    "#         Input data\n",
+    "#     wavelet : Wavelet object or name string\n",
+    "#         Wavelet to use\n",
+    "#     level : int, optional\n",
+    "#         Decomposition level (must be >= 0). If level is None (default) then it\n",
+    "#         will be calculated using the `dwt_max_level` function.\n",
+    "#     axis: int, optional\n",
+    "#         Axis over which to compute the DWT. If not given, the last axis is\n",
+    "#         used. Currently only available when ``transform='dwt'``.\n",
+    "#     transform : {'dwt', 'swt'}\n",
+    "#         Whether to use the DWT or SWT for the transforms.\n",
+    "#     mode : str, optional\n",
+    "#         Signal extension mode, see `Modes` (default: 'symmetric'). This option\n",
+    "#         is only used when transform='dwt'.\n",
+    "#     Returns\n",
+    "#     -------\n",
+    "#     [cAn, {details_level_n}, ... {details_level_1}] : list\n",
+    "#         For more information, see the detailed description in `wavedec`\n",
+    "#     See Also\n",
+    "#     --------\n",
+    "#     ``imra``, ``swt``\n",
+    "#     Notes\n",
+    "#     -----\n",
+    "#     This is sometimes referred to as an additive decomposition because the\n",
+    "#     inverse transform (``imra``) is just the sum of the coefficient arrays\n",
+    "#     [1]_. The decomposition using ``transform='dwt'`` corresponds to section\n",
+    "#     2.2 while that using an undecimated transform (``transform='swt'``) is\n",
+    "#     described in section 3.2 and appendix A.\n",
+    "#     This transform does not share the variance partition property of ``swt``\n",
+    "#     with `norm=True`. It does however, result in coefficients that are\n",
+    "#     temporally aligned regardless of the symmetry of the wavelet used.\n",
+    "#     The redundancy of this transform is ``(level + 1)``.\n",
+    "#     References\n",
+    "#     ----------\n",
+    "#     .. [1] Donald B. Percival and Harold O. Mofjeld. Analysis of Subtidal\n",
+    "#         Coastal Sea Level Fluctuations Using Wavelets. Journal of the American\n",
+    "#         Statistical Association Vol. 92, No. 439 (Sep., 1997), pp. 868-880.\n",
+    "#         https://doi.org/10.2307/2965551\n",
+    "#     \"\"\"\n",
+    "#     if transform == 'swt':\n",
+    "#         if mode != 'periodization':\n",
+    "#             raise ValueError(\n",
+    "#                 \"transform swt only supports mode='periodization'\")\n",
+    "#         kwargs = dict(wavelet=wavelet, norm=True)\n",
+    "#         forward = partial(pywt.swt, level=level, trim_approx=True, **kwargs)\n",
+    "#         if axis % data.ndim != data.ndim - 1:\n",
+    "#             raise ValueError(\"swt only supports axis=-1\")\n",
+    "#         inverse = partial(pywt.iswt, **kwargs)\n",
+    "#         is_swt = True\n",
+    "#     elif transform == 'dwt':\n",
+    "#         kwargs = dict(wavelet=wavelet, mode=mode, axis=axis)\n",
+    "#         forward = partial(pywt.wavedec, level=level, **kwargs)\n",
+    "#         inverse = partial(pywt.waverec, **kwargs)\n",
+    "#         is_swt = False\n",
+    "#     else:\n",
+    "#         raise ValueError(\"unrecognized transform: {}\".format(transform))\n",
     "\n",
-    "    wav_coeffs = forward(data)\n",
+    "#     wav_coeffs = forward(data)\n",
     "\n",
-    "    mra_coeffs = []\n",
-    "    nc = len(wav_coeffs)\n",
+    "#     mra_coeffs = []\n",
+    "#     nc = len(wav_coeffs)\n",
     "\n",
-    "    if is_swt:\n",
-    "        # replicate same zeros array to save memory\n",
-    "        z = np.zeros_like(wav_coeffs[0])\n",
-    "        tmp = [z, ] * nc\n",
-    "    else:\n",
-    "        # zero arrays have variable size in DWT case\n",
-    "        tmp = [np.zeros_like(c) for c in wav_coeffs]\n",
+    "#     if is_swt:\n",
+    "#         # replicate same zeros array to save memory\n",
+    "#         z = np.zeros_like(wav_coeffs[0])\n",
+    "#         tmp = [z, ] * nc\n",
+    "#     else:\n",
+    "#         # zero arrays have variable size in DWT case\n",
+    "#         tmp = [np.zeros_like(c) for c in wav_coeffs]\n",
     "\n",
-    "    for j in range(nc):\n",
-    "        # tmp has arrays of zeros except for the jth entry\n",
-    "        tmp[j] = wav_coeffs[j]\n",
+    "#     for j in range(nc):\n",
+    "#         # tmp has arrays of zeros except for the jth entry\n",
+    "#         tmp[j] = wav_coeffs[j]\n",
     "\n",
-    "        # reconstruct\n",
-    "        rec = inverse(tmp)\n",
-    "        if rec.shape != data.shape:\n",
-    "            # trim any excess coefficients\n",
-    "            rec = rec[tuple([slice(sz) for sz in data.shape])]\n",
-    "        mra_coeffs.append(rec)\n",
+    "#         # reconstruct\n",
+    "#         rec = inverse(tmp)\n",
+    "#         if rec.shape != data.shape:\n",
+    "#             # trim any excess coefficients\n",
+    "#             rec = rec[tuple([slice(sz) for sz in data.shape])]\n",
+    "#         mra_coeffs.append(rec)\n",
     "\n",
-    "        # restore zeros\n",
-    "        if is_swt:\n",
-    "            tmp[j] = z\n",
-    "        else:\n",
-    "            tmp[j] = np.zeros_like(tmp[j])\n",
-    "    return mra_coeffs\n",
+    "#         # restore zeros\n",
+    "#         if is_swt:\n",
+    "#             tmp[j] = z\n",
+    "#         else:\n",
+    "#             tmp[j] = np.zeros_like(tmp[j])\n",
+    "#     return mra_coeffs\n",
     "\n",
     "\n",
-    "def imra(mra_coeffs):\n",
-    "    \"\"\"Inverse 1D multiresolution analysis via summation.\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    mra_coeffs : list of ndarray\n",
-    "        Multiresolution analysis coefficients as returned by `mra`.\n",
-    "    Returns\n",
-    "    -------\n",
-    "    rec : ndarray\n",
-    "        The reconstructed signal.\n",
-    "    See Also\n",
-    "    --------\n",
-    "    ``mra``\n",
-    "    References\n",
-    "    ----------\n",
-    "    .. [1] Donald B. Percival and Harold O. Mofjeld. Analysis of Subtidal\n",
-    "        Coastal Sea Level Fluctuations Using Wavelets. Journal of the American\n",
-    "        Statistical Association Vol. 92, No. 439 (Sep., 1997), pp. 868-880.\n",
-    "        https://doi.org/10.2307/2965551\n",
-    "    \"\"\"\n",
-    "    return reduce(lambda x, y: x + y, mra_coeffs)"
+    "# def imra(mra_coeffs):\n",
+    "#     \"\"\"Inverse 1D multiresolution analysis via summation.\n",
+    "#     Parameters\n",
+    "#     ----------\n",
+    "#     mra_coeffs : list of ndarray\n",
+    "#         Multiresolution analysis coefficients as returned by `mra`.\n",
+    "#     Returns\n",
+    "#     -------\n",
+    "#     rec : ndarray\n",
+    "#         The reconstructed signal.\n",
+    "#     See Also\n",
+    "#     --------\n",
+    "#     ``mra``\n",
+    "#     References\n",
+    "#     ----------\n",
+    "#     .. [1] Donald B. Percival and Harold O. Mofjeld. Analysis of Subtidal\n",
+    "#         Coastal Sea Level Fluctuations Using Wavelets. Journal of the American\n",
+    "#         Statistical Association Vol. 92, No. 439 (Sep., 1997), pp. 868-880.\n",
+    "#         https://doi.org/10.2307/2965551\n",
+    "#     \"\"\"\n",
+    "#     return reduce(lambda x, y: x + y, mra_coeffs)"
    ]
   },
   {
