--- a/FLX_JP-Swl.ipynb
+++ b/FLX_JP-Swl.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pywt\n",
-    "import wavelet_partition as wave\n",
+    "import wavefuncs as wave\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "from matplotlib.dates import DateFormatter\n",
