JP-BBY and cleaning

--- a/FLX_JP-Swl.ipynb
+++ b/FLX_JP-Swl.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,31 +41,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Import data and process\n",
-    "\n",
-    "FLUXNET-CH4 data stored on google drive, read with pandas\n",
-    "\n",
-    "replace missing, parse timestamp"
+    "## Import data and process"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = wave.pd_read_from_drive('FLX_JP-Swl') # read"
+    "df = wave.pd_read_from_drive('FLX_JP-Swl') # read from google drive into pd.DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df.replace(-9999, np.nan) # replace missing with nan\n",
     "df['date'] = pd.to_datetime(df['TIMESTAMP_START'], format='%Y%m%d%H%M') # parse timestamp to new column 'date'\n",
-    "df = df.set_index(df['date'])"
+    "df = df.set_index(df['date']) # make DatetimeIndex\n",
+    "df = df.loc[:, [\"LE\", \"FCH4\", \"TA\", \"FCH4_F\", \"TA_F\", 'LE_F']] # select all rows, some columns"
    ]
   },
   {
@@ -77,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +90,7 @@
    ],
    "source": [
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
-    "ax.scatter(df['date'], df['FCH4'], c='k', s=1)\n",
+    "ax.scatter(df.index, df['FCH4'], c='k', s=1)\n",
     "ax.set_ylabel(\"CH4 flux, raw\")\n",
     "ax.set_xlabel(\"date\")\n",
     "ax.set_title(\"FCH4 2016-2017 FLX-Swl\")\n",
@@ -105,22 +102,6 @@
    "metadata": {},
    "source": [
     "### Summer 2016"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "select all rows from selected columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df.loc[:, [\"LE\", \"FCH4\", \"TA\", \"FCH4_F\", \"TA_F\", 'LE_F']]"
    ]
   },
   {
@@ -582,34 +563,6 @@
     "#     plt.savefig(filename)\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "compute wavelet transforms"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cM = pywt.wavedec(df.loc[dfw.index, 'FCH4_Fn'], 'haar')\n",
-    "cT = pywt.wavedec(df.loc[dfw.index, 'TA_Fn'], 'haar')\n",
-    "cLE = pywt.wavedec(df.loc[dfw.index, 'LE_Fn'], 'haar')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# full multi-level reconstruction\n",
-    "df.loc[dfw.index, 'FCH4_rec'] = pywt.waverec(cM, 'haar')"
    ]
   },
   {
