wavelet transform back into df

--- a/FLX_JP-BBY.ipynb
+++ b/FLX_JP-BBY.ipynb
@@ -564,16 +564,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[dfw.index, ['FCH4_w{}'.format(j) for j in range(len(csumM))]] = np.array(csumM).T\n",
+    "\n",
+    "df.loc[dfw.index, ['LE_w{}'.format(j) for j in range(len(csumLE))]] = np.array(csumLE).T\n",
+    "\n",
+    "df.loc[dfw.index, ['TA_w{}'.format(j) for j in range(len(csumT))]] = np.array(csumT).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>LE_w0</th>\n",
+       "      <th>LE_w1</th>\n",
+       "      <th>LE_w2</th>\n",
+       "      <th>LE_w3</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01 01:30:00</th>\n",
+       "      <td>-24.986436</td>\n",
+       "      <td>11.012337</td>\n",
+       "      <td>-31.461346</td>\n",
+       "      <td>-35.151512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01 02:00:00</th>\n",
+       "      <td>-26.204862</td>\n",
+       "      <td>-0.375916</td>\n",
+       "      <td>-33.528173</td>\n",
+       "      <td>-17.231668</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01 02:30:00</th>\n",
+       "      <td>-27.306110</td>\n",
+       "      <td>-11.003460</td>\n",
+       "      <td>-32.876686</td>\n",
+       "      <td>-2.309906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01 03:00:00</th>\n",
+       "      <td>-28.039987</td>\n",
+       "      <td>-18.383592</td>\n",
+       "      <td>-31.967418</td>\n",
+       "      <td>2.592483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-08-01 03:30:00</th>\n",
+       "      <td>-28.154131</td>\n",
+       "      <td>-20.042348</td>\n",
+       "      <td>-32.804608</td>\n",
+       "      <td>7.402920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-22 08:30:00</th>\n",
+       "      <td>-20.097685</td>\n",
+       "      <td>44.478529</td>\n",
+       "      <td>11.196737</td>\n",
+       "      <td>-0.210289</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-22 09:00:00</th>\n",
+       "      <td>-20.716722</td>\n",
+       "      <td>43.206978</td>\n",
+       "      <td>18.354813</td>\n",
+       "      <td>-8.898730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-22 09:30:00</th>\n",
+       "      <td>-21.387224</td>\n",
+       "      <td>40.184467</td>\n",
+       "      <td>14.751977</td>\n",
+       "      <td>-1.549834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-22 10:00:00</th>\n",
+       "      <td>-22.123712</td>\n",
+       "      <td>35.441701</td>\n",
+       "      <td>3.330884</td>\n",
+       "      <td>3.450562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-11-22 10:30:00</th>\n",
+       "      <td>-22.905276</td>\n",
+       "      <td>29.457007</td>\n",
+       "      <td>-11.126854</td>\n",
+       "      <td>12.436605</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5443 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         LE_w0      LE_w1      LE_w2      LE_w3\n",
+       "date                                                           \n",
+       "2018-08-01 01:30:00 -24.986436  11.012337 -31.461346 -35.151512\n",
+       "2018-08-01 02:00:00 -26.204862  -0.375916 -33.528173 -17.231668\n",
+       "2018-08-01 02:30:00 -27.306110 -11.003460 -32.876686  -2.309906\n",
+       "2018-08-01 03:00:00 -28.039987 -18.383592 -31.967418   2.592483\n",
+       "2018-08-01 03:30:00 -28.154131 -20.042348 -32.804608   7.402920\n",
+       "...                        ...        ...        ...        ...\n",
+       "2018-11-22 08:30:00 -20.097685  44.478529  11.196737  -0.210289\n",
+       "2018-11-22 09:00:00 -20.716722  43.206978  18.354813  -8.898730\n",
+       "2018-11-22 09:30:00 -21.387224  40.184467  14.751977  -1.549834\n",
+       "2018-11-22 10:00:00 -22.123712  35.441701   3.330884   3.450562\n",
+       "2018-11-22 10:30:00 -22.905276  29.457007 -11.126854  12.436605\n",
+       "\n",
+       "[5443 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[dfw.index, 'LE_w0':'LE_w3']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# flatten lists of wavelet coefficients\n",
     "cMflat = np.concatenate(csumM).ravel(order = 'F').reshape(-1, 1)\n",
-    "cLEflat = np.concatenate(csumLE).ravel(order = 'F').reshape(-1, 1)\n",
-    "\n",
-    "cMpd = pd.DataFrame(csumM).transpose()\n",
-    "cLEpd = pd.DataFrame(csumLE).transpose()"
+    "cLEflat = np.concatenate(csumLE).ravel(order = 'F').reshape(-1, 1)"
    ]
   },
   {
@@ -638,7 +797,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cMpd = pd.DataFrame(csumM).transpose()\n",
+    "cLEpd = pd.DataFrame(csumLE).transpose()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
