--- a/FLX_JP-BBY.ipynb
+++ b/FLX_JP-BBY.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.dates as mdates\n",
     "from numpy.polynomial import Polynomial as P\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
@@ -52,7 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = wave.pd_read_from_drive('FLX_JP-BBY') # read from google drive into pd.DataFrame"
+    "# df = wave.pd_read_from_drive('FLX_JP-BBY') # read from google drive into pd.DataFrame\n",
+    "df = wave.read('FLX_JP-BBY', 'file')"
    ]
   },
   {
