--- a/wave_v0.1_FLX_JP-SwL.ipynb
+++ b/wave_v0.1_FLX_JP-SwL.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Using a wavelet transform to partition FLUXNET-CH4 data into diffusive and ebullitive fluxes.\n",
     "\n",
-    "Site: FLX_JP-SWL, Lake Suwa\n",
+    "Site: FLX_JP-SwL, Lake Suwa\n",
     "\n",
     "- import data from Google drive, preprocess (nan, parse date)\n",
     "- find mostly continuous chunk\n",
